--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,9 +1,10 @@
 #spring.application.name=springdemo
 
 #CONNECTING TO DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/record_shop
-spring.datasource.username=username
-spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/record_shop?useSSL=false&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=nicholas
+spring.datasource.password=zipcode(0)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #The spring.jpa.hibernate.ddl-auto=update property automatically creates
