--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -3,8 +3,8 @@
 #CONNECTING TO DATABASE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/record_shop?useSSL=false&useTimezone=true&serverTimezone=UTC
-spring.datasource.username=nicholas
-spring.datasource.password=zipcode(0)
+spring.datasource.username=username
+spring.datasource.password=pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #The spring.jpa.hibernate.ddl-auto=update property automatically creates
